// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EsProgressCircle <EsProgressCircle /> 1`] = `
"<div><svg viewBox="0 0 100 100" height="50px" width="50px">
    <circle cx="50" cy="50" stroke-width="8" r="45%" class="inner-circle"></circle>
    <circle stroke-dasharray="155.50883635269477 300" cx="50" cy="50" r="45%" stroke-width="8" stroke-linecap="round" transform="rotate(-90, 50, 50)" class="progress-circle"></circle> <text x="50%" y="52%" dominant-baseline="middle" alignment-baseline="middle" text-anchor="middle" class="font-weight-boldest text-gray-700 font-size-base">
      55%
    </text>
  </svg></div>"
`;

exports[`EsProgressCircle <EsProgressCircle /> default prop values 1`] = `
"<div><svg viewBox="0 0 100 100" height="50px" width="50px">
    <circle cx="50" cy="50" stroke-width="8" r="45%" class="inner-circle"></circle>
    <circle stroke-dasharray="155.50883635269477 300" cx="50" cy="50" r="45%" stroke-width="8" stroke-linecap="round" transform="rotate(-90, 50, 50)" class="progress-circle"></circle> <text x="50%" y="52%" dominant-baseline="middle" alignment-baseline="middle" text-anchor="middle" class="font-weight-boldest text-gray-700 font-size-base">
      55%
    </text>
  </svg></div>"
`;

exports[`EsProgressCircle <EsProgressCircle /> updates prop values 1`] = `
"<div><svg viewBox="0 0 100 100" height="50px" width="50px">
    <circle cx="50" cy="50" stroke-width="8" r="45%" class="inner-circle"></circle>
    <circle stroke-dasharray="59.37610115284709 300" cx="50" cy="50" r="45%" stroke-width="8" stroke-linecap="round" transform="rotate(-90, 50, 50)" class="progress-circle"></circle>
    <!---->
  </svg></div>"
`;
